feat: update some meta data

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpg" href="/me.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>7Red4's Home</title>
+    <meta property="og:title" content="7Red4">
+    <meta property="og:description" content="7Red4's Homepage">
+    <meta property="og:image" content="/me.jpg">
+    <meta property="og:url" content="https://7red4.com">
+    <meta property="og:site_name" content="7Red4">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="zh_TW">
+    
+    <meta name="description" content="7Red4's Homepage">
+    <meta name="keywords" content="7Red4, portfolio, web, developer, engineer">
+    <meta name="robots" content="index, follow">
+    <meta name="google" content="notranslate">
   </head>
   <body>
     <div id="app"></div>
